# GlimmerHub

GlimmerHubClient/: CMakeLists.txt  main.cpp  res.qrc
GlimmerHubClient/qml/: BaseTabBar.qml  ContactPage.qml  FindPage.qml  Main.qml  MessagePage.qml  MyBusyIndicator.qml  MyPage.qml
